examples/fail/call_arity_mismatch.hax
module ZZZ::CallArityMismatch;

sub f(Int $a, Bool $b) -> Int { return $a; }

sub main() -> Int {
  return f(1);
}
